--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-### IntelliJ IDEA ###
+.gradle
+gradle/
+.idea/
+build/
+target/
+
+*.iws
+*.iml
+*.ipr
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
